Projet GL/test/src/test/deca/syntax/invalid/instruction_decl_inverse.res
src/test/deca/syntax/invalid/instruction_decl_inverse.deca:16:8: no viable alternative at input 'b'
